--- a/MEAB/Web.config
+++ b/MEAB/Web.config
@@ -9,9 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=LAPTOP-0PFK2UMF\MAIN;Initial Catalog=MEAB;Integrated Security=True" providerName="System.Data.SqlClient" />
-
+    <!--<add name="DefaultConnection" connectionString="Data Source=LAPTOP-0PFK2UMF\MAIN;Initial Catalog=MEAB;Integrated Security=True" providerName="System.Data.SqlClient" />-->    
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-MEAB-20160527112511.mdf;Initial Catalog=aspnet-MEAB-20160527112511;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="MEABContext" connectionString="data source=.;initial catalog=MEAB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
