--- a/MEAB/MEAB.csproj
+++ b/MEAB/MEAB.csproj
@@ -226,6 +226,9 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\bootstrap.sandstone.css" />
+    <Content Include="Content\bootstrap.sandstone.min.css" />
+    <Content Include="Content\Images\silmarillion__fall_of_gondolin_by_ladyelleth.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
