--- a/MEAB/packages.config
+++ b/MEAB/packages.config
@@ -35,5 +35,6 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Respond" version="1.2.0" targetFramework="net451" />
+  <package id="Twitter.Bootstrap.Bootswatch.Sandstone" version="3.2.0.0" targetFramework="net451" />
   <package id="WebGrease" version="1.5.2" targetFramework="net451" />
 </packages>
